@@ -2,7 +2,7 @@ SUBDIRS = src tests tutorial benchmark
 
 bin_SCRIPTS = atlas-config
 
-EXTRA_DIST = ROADMAP Doxyfile footer.html index.dox atlas.m4
+EXTRA_DIST = ROADMAP Doxyfile footer.html index.dox
 
 m4datadir = $(datadir)/aclocal
 m4data_DATA = atlas.m4
