@@ -4,7 +4,10 @@ AC_INIT()
 
 dnl Initialise automake
 
-AM_INIT_AUTOMAKE("Atlas", "0.3.9")
+ATLAS_VERSION=0.3.11
+AC_SUBST(ATLAS_VERSION)
+
+AM_INIT_AUTOMAKE("Atlas", "0.3.11")
 AM_CONFIG_HEADER(config.h)
 
 dnl Test for GNU libtool
@@ -280,6 +283,10 @@ AC_CHECK_HEADERS(vector)
 
 AC_LANG_RESTORE
 
+SYSTEM_LIBS="$SYSTEM_LIBS -lm"
+ATLAS_CFLAGS=""
+ATLAS_LIBS="-lAtlas -lAtlasCodecs -lAtlasMessage -lAtlasNet -lAtlasObjects -lAtlasObjectsOperation -lAtlasObjectsEntity"
+
 dnl Test for gzip compression library
 
 AC_ARG_WITH(zlib,
@@ -295,6 +302,8 @@ LIBS="$LIBS -L$with_zlib/lib"
 AC_CHECK_LIB(z, inflate)
 
 AC_CHECK_HEADERS(zlib.h)
+
+SYSTEM_LIBS="$SYSTEM_LIBS -lz"
 
 CFLAGS="$ac_save_CFLAGS"
 LIBS="$ac_save_LIBS"
@@ -315,8 +324,14 @@ AC_CHECK_LIB(bz2, bzCompressInit)
 
 AC_CHECK_HEADERS(bzlib.h)
 
+SYSTEM_LIBS="$SYSTEM_LIBS -lbz2"
+
 CFLAGS="$ac_save_CFLAGS"
 LIBS="$ac_save_LIBS"
+
+AC_SUBST(ATLAS_CFLAGS)
+AC_SUBST(ATLAS_LIBS)
+AC_SUBST(SYSTEM_LIBS)
 
 dnl Generate files
 
@@ -334,4 +349,5 @@ AC_OUTPUT([
 	tests/Objects/Makefile
 	tutorial/Makefile
 	benchmark/Makefile
-])
+	atlas-config
+], [chmod +x atlas-config])
