@@ -1,3 +1,8 @@
+2001-01-14  Al Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* Added spec, config script and autoconf macro
+	from devel branch.
+
 2001-01-14  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>
 
 	* src/Objects/Decoder.cc (ARR): Added return statement in if
